infrastructure/workloads/overlays/payu-dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payu-dev
  labels:
    app.kubernetes.io/part-of: payu
    environment: dev
