infrastructure/workloads/overlays/payu-dev/use-ssl-false-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-portal-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cms-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compliance-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dispute-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fx-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: investment-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kyc-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lending-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: partner-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: promotion-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: statement-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: support-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
spec:
  template:
    spec:
      containers:
      - name: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallet-service
spec:
  template:
    spec:
      containers:
      - name: app
